# FyD

./: .clang-format  CMakeLists.txt  README.md  default.nix
fyd/: CMakeLists.txt
fyd/include/: data_types.hh  free_data.hh
fyd/include/data_sources/: twitch.hh  twitter.hh  youtube.hh
fyd/src/: cli_fyd.cpp  data_types.cpp  free_data.cpp
fyd/src/data_sources/: twitch.cpp  twitter.cpp  youtube.cpp
include/: data_types.hh  free_data.hh
include/data_sources/: twitch.hh  twitter.hh  twitter_source.hh  youtube.hh  youtube_source.hh
src/: free_data.cpp
src/data_sources/: twitch.cpp  twitter.cpp  twitter_source.cpp  youtube.cpp  youtube_source.cpp
